gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interns-webapp
  namespace: default
spec:
  selector:
    app: interns-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
