gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interns-webapp
  namespace: ladesa-ro-development
  annotations:
    cert-manager.io/cluster-issuer: ladesa-ro-issuer-production
spec:
  ingressClassName: traefik
  rules:
    - host: dev.ladesa.com.br
      http:
        paths:
          - path: /estagios
            pathType: Prefix
            backend:
              service:
                name: interns-webapp
                port:
                  number: 80
  tls:
    - hosts:
        - dev.ladesa.com.br
      secretName: interns-webapp-tls
